[gd_scene load_steps=5 format=3 uid="uid://c2b14p3a0y2gt"]

[ext_resource type="Texture2D" uid="uid://cphs62pdws4gq" path="res://texture/bg3.jpg" id="1_pvdqq"]
[ext_resource type="Texture2D" uid="uid://u7noylewqvha" path="res://texture/ptttt.png" id="2_dlgri"]
[ext_resource type="Script" path="res://scene/equpannel.gd" id="2_dquni"]
[ext_resource type="Texture2D" uid="uid://dt7ampji0u37y" path="res://texture/unknown.png" id="3_sdoos"]

[node name="EQUPANNEL" type="NinePatchRect"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -255.0
offset_top = -204.0
offset_right = 259.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("1_pvdqq")
region_rect = Rect2(-2.5, -0.5, 580, 385)
script = ExtResource("2_dquni")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.0
offset_top = -47.0
offset_right = 41.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "CONFIRM"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 220.0
offset_bottom = 58.0
texture = ExtResource("2_dlgri")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = 6.0
offset_top = 17.0
offset_right = 141.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0.960784, 0.878431, 0.905882, 1)
theme_override_colors/font_shadow_color = Color(0.737255, 0.313726, 0.321569, 1)
text = "NEW EQUIPMENT"

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 64.0
offset_right = 115.0
offset_bottom = 135.0
texture = ExtResource("3_sdoos")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="TextureRect3" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 56.0
offset_right = 478.0
offset_bottom = 145.0
color = Color(0.85098, 0.819608, 0.619608, 1)

[node name="Label" type="Label" parent="TextureRect3"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.447059, 0.772549, 0.556863, 1)
theme_override_colors/font_shadow_color = Color(0.47451, 0.443137, 0.631373, 1)
text = "NEW EQUIPMENT"

[node name="ScrollContainer" type="ScrollContainer" parent="TextureRect3"]
layout_mode = 0
offset_left = 2.0
offset_top = 30.0
offset_right = 307.0
offset_bottom = 87.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect3/ScrollContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TextureRect3/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.447059, 0.772549, 0.556863, 1)
theme_override_colors/font_shadow_color = Color(0.47451, 0.443137, 0.631373, 1)
text = "NEW EQUIPMENT"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
